# claude-tank

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  main.py  package-lock.json  package.json
core/: api_client.py  auth.py  config.py  plan_detector.py  poller.py  webview_api.py
docs/: README.de.md  README.fr.md  README.ja.md  README.ko.md  SPEC.md
legacy-python/: build.py  requirements.txt
legacy-python/core/: auth.py  cookie_extractor.py  i18n.py  poller.py
legacy-python/locales/: en.json  ja.json
legacy-python/tray/: tray_app.py
legacy-python/ui/: widget_manager.py
legacy-python/ui/web/: setup.html
legacy-python/ui/web/js/: hover.js  themes.js
legacy-python/widget/: taskbar_integration.py
locales/: en.json  ja.json
src/: api.rs  config.rs  crypto.rs  dashboard.html  i18n.rs  index.html  main.rs  panic_hook.rs  popup.rs  time_util.rs  tray.rs  win_util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  usage.rs
src/css/: base.css  theme-cyber.css
src/js/: gauges.js
src/locales/: de.json  en.json  fr.json  ja.json  ko.json
tray/: icon_renderer.py
ui/: widget_manager.py
ui/web/: hover.html  index.html  setup.html  widget.html
ui/web/css/: gauges.css  widget.css
ui/web/js/: app.js
