[package]
name = "claude-tank"
version = "1.0.0"
description = "Claude Tank — Your Claude plan usage monitor for Windows"
authors = ["Quatrex"]
edition = "2021"

[dependencies]
tray-icon = "0.19"
wry = "0.49"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
raw-window-handle = "0.6"
ureq = { version = "3", features = ["json"] }
open = "5"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip debug symbols
codegen-units = 1   # Single codegen unit for better optimization
