[package]
name = "claude-tank"
version = "1.0.0"
description = "Claude Tank — Your Claude plan usage monitor for Windows"
authors = ["Quatrex"]
edition = "2021"

[lib]
name = "claude_tank_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
dirs = "6"
